[gd_scene load_steps=4 format=2]

[ext_resource path="res://keyboardpress.gd" type="Script" id=1]
[ext_resource path="res://art/right-arrow.png" type="Texture" id=2]
[ext_resource path="res://art/left-arrow.png" type="Texture" id=3]

[node name="keyboardpress" type="Node2D"]
script = ExtResource( 1 )

[node name="leftbutton" type="TouchScreenButton" parent="."]
normal = ExtResource( 3 )

[node name="rightbutton" type="TouchScreenButton" parent="."]
position = Vector2( 91, -1 )
normal = ExtResource( 2 )

[connection signal="pressed" from="leftbutton" to="." method="_on_leftbutton_pressed"]
[connection signal="released" from="leftbutton" to="." method="_on_leftbutton_released"]
[connection signal="pressed" from="rightbutton" to="." method="_on_rightbutton_pressed"]
[connection signal="released" from="rightbutton" to="." method="_on_rightbutton_released"]
